--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
-    "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server"
+    "upload-site": "gh-pages -d public/",
+        "predeploy": "npm run lint",
+        "deploy": "hexo clean && hexo generate && npm run upload-site",
+        "lint": "markdownlint source/",
+        "start": "hexo server"
   },
   "hexo": {
     "version": "5.4.0"
@@ -22,5 +23,8 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
